# fudan-jwc-news

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
fudan_jwc_news/: __init__.py  jwc_news.py
tests/: test_fudan_jwc_news.py
