[tool.poetry]
name = "fudan-jwc-news"
version = "0.5.2"
description = "Read Fudan JWC news from your terminal"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tddschn/fudan-jwc-news"
repository = "https://github.com/tddschn/fudan-jwc-news"
classifiers = [
	"Topic :: Utilities",
]
keywords = ["fudan", "news"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/fudan-jwc-news/issues"

[tool.poetry.scripts]
jwc-news = "fudan_jwc_news.jwc_news:main"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.27.1"
typer = "^0.4.1"
pyinstrument = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = "^0.10.2"
yapf = "^0.32.0"
better-exceptions = "^0.3.3"
bump2version = "^1.0.1"
scalene = "^1.5.8"
logging-utils-tddschn = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
